src/test/resources/refCompilerOutput/invalid/syntaxErr/function/functionLateDefine.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 17:7 -- missing '=' at '('
Syntactic Error at 17:8 -- no viable alternative at input ')'
Syntactic Error at 17:10 -- mismatched input 'is' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', ';'}
Syntactic Error at 20:2 -- mismatched input 'int' expecting <EOF>
4 parser error(s) detected, no further compilation attempted.
